--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "handlebars": "^4.7.8",
     "next": "14.2.13",
     "next-auth": "^4.24.7",
     "react": "^18",
