--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@kinde-oss/kinde-auth-nextjs": "^2.3.10",
     "@prisma/client": "^5.20.0",
     "handlebars": "^4.7.8",
     "next": "14.2.13",
