--- a/package.json
+++ b/package.json
@@ -11,13 +11,19 @@
   "dependencies": {
     "@kinde-oss/kinde-auth-nextjs": "^2.3.10",
     "@prisma/client": "^5.20.0",
+    "@radix-ui/react-icons": "^1.3.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "handlebars": "^4.7.8",
+    "lucide-react": "^0.451.0",
     "next": "14.2.13",
     "next-auth": "^4.24.7",
     "nodemailer": "^6.9.15",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
+    "tailwind-merge": "^2.5.3",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
   },
   "devDependencies": {
